
  - Fix ParseConfig() so it works regardless of initial construction
    variable values.

    Extend CheckHeader(), CheckCHeader(), CheckCXXHeader() and
    CheckLibWithHeader() to accept a list of header files that will be
    #included in the test.  The last one in the list is assumed to be
    the one being checked for.  (Prototype code contributed by Gerard
    Patel and Niall Douglas).

  From Clark McGrew:

  - Generalize the action for .tex files so that it will decide whether
    a file is TeX or LaTeX, check the .aux output to decide if it should
    run bibtex, and check the .log output to re-run LaTeX if needed.

  From Bram Moolenaar:

  - Split the non-SCons-specific functionality from SConf.py to a new,
    re-usable Conftest.py module.

  From Gary Oberbrunner:

  - Allow a directory to be the target or source or dependency of a
    Depends(), Ignore(), Precious() or SideEffect() call.

  From Gerard Patel:

  - Use the %{_mandir} macro when building our RPM package.

  From Marko Rauhamaa:

  - Have the closing message say "...terminated because of errors" if
    there were any.

  From Anthony Roach:

  - On Win32 systems, only use "rm" to delete files if Cygwin is being
    used.   ("rm" doesn't understand Win32-format path names.)

  From Christoph Wiedemann:

  - Fix test/SWIG.py to find the Python include directory in all cases.

  - Fix a bug in detection of Qt installed on the local system.

  - Support returning Python 2.3 BooleanType values from Configure checks.

  - Provide an error message if someone mistakenly tries to call a
    Configure check from within a Builder function.

  - Support calling a Builder when a Configure context is still open.

  - Handle interrupts better by eliminating all try:-except: blocks
    which caught any and all exceptions, including KeyboardInterrupt.



RELEASE 0.92 - Wed, 20 Aug 2003 03:45:28 -0500

  From Charles Crain and Gary Oberbrunner:
